# sent-me-email

./: CMakeLists.txt  Config.h.in  LICENSE  README.en.md  README.md  main.cpp
Authentication/: Authentication.h  CMakeLists.txt  authentication.cpp
CLI/: CLI.h  CMakeLists.txt  cli.cpp
MathFunctions/: mysqrt.cpp
lib/: config.h  conio.h
lib/Base64Codec/: Base64Codec.h  CMakeLists.txt  base64.cpp
lib/CLI/: CLI.h  CMakeLists.txt  cli.cpp
lib/Error/: CMakeLists.txt  Error.h  error.cpp
lib/Pop3Session/: CMakeLists.txt  Pop3Session.h  pop3session.cpp
lib/Socket/: CMakeLists.txt  Socket.h  socket.cpp
resources/: test.eml  testDownload.eml
src/: pop3-client.cpp
